--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<body>
 
 		<div id="container">
-			<div id="marca">calcuprotein</div>
+			<div id="marca">calcuprotein.</div>
 		</div>	
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
 		<div id="conteudo" class="card">
 			<div>
 				<h1>QUANTIDADE DE PROTEINAS <br> <small>(100 gramas)</small></h1>
@@ -107,6 +109,8 @@
             </div>
         </div>
     </section>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
     <script src="index.js"></script>
 		</div>
 		<div class="Built">
