--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="website icon" type="png" href="infinito.png">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
 	</head>
 
 	<body>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
 		<div id="container">
 			<div id="marca">calcuprotein.</div>
 		</div>	
