--- a/index.html
+++ b/index.html
@@ -120,5 +120,17 @@
 			<strong>Built and designed by Jean Oliveira. <br>
 			All rights reserved. © </strong>
 		</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
+<!-- bloco -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6772235980391050"
+     data-ad-slot="4193758893"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	</body>
 </html>
