--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
      crossorigin="anonymous"></script>
     <script src="index.js"></script>
 		</div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
+<!-- vertical -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6772235980391050"
+     data-ad-slot="2153865017"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<div class="Built">
 			<strong>Built and designed by Jean Oliveira. <br>
 			All rights reserved. © </strong>
