--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 		<div id="container">
 			<div id="marca">calcuprotein.</div>
 		</div>	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
+     crossorigin="anonymous"></script>
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6772235980391050"
+     data-ad-slot="9792187046"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6772235980391050"
      crossorigin="anonymous"></script>
 		<div id="conteudo" class="card">
